@@ -38,6 +38,10 @@ Version 2.1.2 - The "We're on fire!" version
 		  the template is not found.
 		* Fix for bug in ReadyPath() function.
 		* Create a backup of the log file upon init.
+	
+	Vollstrecker:
+		* Added check if locale could be set, before adding the language to
+		  the options dialog.
 
 	Xaignar:
 		* Ensured that partial files left from failed file-completion attempts
